# langChain_practice

./: .env.example  02_langchain_gemini_emb_model.py  04_langchain_gemini_emb_serach.py  05_langchain_messages.py  06_langchain_message_placeholder.py  07_langchain_with_structure_output_dic.py  08_langchain_with_structure_output_pydantic.py  09_langchain_with_structure_output_json_schema.py  10_langchain_str_outputparser.py  11_langchain_json_outputparser.py  12_langchain_simple_chain.py  12_langchain_structure_outputparser.py  13_langchain_simple_2llm_chain.py  14_langchain_runnable_sequence.py  15_langchain_runnable_parallel.py  16_langchain_runnable_passthrough.py  17_langchain_runnable_lambda.py  18_langchain_runnable_branch.py  19_langchain_text_loader.py  1_langchain_gemini_model.py  20_langchain_pdf_loader.py  21_langchain_directory_loader.py  22_langchain_webbase_loader.py  23_langchain_text_splitter_length_based.py  24_langchain_text_splitter_structure_based.py  25_langchain_text_splitter_python_code.py  26_langchain_text_splitter_markdown.py  27_langchain_chroma_vdb.py  27_langchain_faiss_vdb_alternative.py  28_langchain_through_yt_transcript.py  30_langchain_tools_call.py  data.txt  gemini_emb_doc.py  gemini_model.py  pyproject.toml  requirements.txt
chroma_langchain_db/: chroma.sqlite3
faiss_index/: index.faiss  index.pkl
