[project]
name = "langchain-prc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=1.2.3",
    "langchain-google-genai>=4.1.3",
    "langchain-groq>=1.1.1",
    "langchain-openai>=1.1.7",
    "python-dotenv>=1.2.1",
    "scikit-learn>=1.8.0",
    "typing>=3.10.0.0",
]
